# db-migration-tool

./: .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yaml
db/sql/table/: migraiton_patches.sql  migration_stored_procedures.sql
src/: error.rs  file_entry.rs  main.rs
