[package]
name = "db-migration-tool"
version = "0.1.0"
authors = ["aoyagikouhei <aoyagi_kouhei@uniquevision.co.jp>"]
edition = "2018"
description = "db migration tool"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "^2.33"
thiserror = "^1"
tokio-postgres = "^0.5"
tokio = { version = "^0.2", features = ["macros"] }
sha1 = "^0.6"